# fulofilo-analytics

./: .env.cloudflare.example  .gitignore  DEPLOY.sh  DOCUMENTATION.md  FuloFilo.command  FuloFilo_Report_2026-03-27.xlsx  README.md  add_march_sales.py  fill_csv_history.py  pyproject.toml  requirements.txt  sync_excel_to_dashboard.py  update_excel.py
.streamlit/: config.toml
FF_Dados_Fiscais/: Saida (10).xls  Saida (11).xls  Saida (12).xls  Saida (13).xls  Saida (14).xls  Saida (16).xls  Saida (17).xls  Saida (18).xls  Saida (3).xls  Saida (4).xls  Saida (5).xls  Saida (6).xls  Saida (7).xls  Saida (8).xls  Saida (9).xls
FF_Grafica/: gabarito-cartão-visita-1.ai
app/: __init__.py  app.py  db.py
cf-worker/: package-lock.json  package.json  worker.js  wrangler.toml
configs/: cloudflare.deploy.env.example
core/: __init__.py  alerts.py  analytics.py  classification.py  decision_engine.py  recommendations.py  reporting.py
data/: fulofilo.duckdb
docs/: AUDIT_REPORT.md  DATA_DICTIONARY.md  FuloFilo_Professional_Report.docx  FuloFilo_Technical_Report.docx  FuloFilo_User_Guide.docx  PROFESSIONAL_REPORT.md  README.md  SHORTCUTS.md  USER_GUIDE.md
etl/: build_catalog.py  categorize_products.py  ingest.py  ingest_eleve.py  ingest_march_april_2026.py  sync_and_push.py
excel/: build_report.py
reports/: weekly_report.py
sales_automation_bundle/: PDF_to_Excel_Pipeline_README.md  multi_day_sales_tracker_template.xlsx  pdf_to_sales_pipeline.py  run_pdf_to_sales.command
scripts/: bootstrap_excel_master.py  cloudflare_dashboard_cleanup.py  deploy_cloudflare_worker.sh  (+4 more)
(+362 files in other folders)
