[project]
name = "fulofilo-analytics-pro"
version = "0.1.0"
description = "Modern Data Stack Analytics for FulôFiló"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32.0",
    "polars>=0.20.15",
    "duckdb>=0.10.0",
    "plotly>=5.19.0",
    "pandas>=2.2.1",
    "ultralytics>=8.1.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "etl"]
