[project]
name = "fulofilo-analytics-pro"
version = "0.1.0"
description = "Modern Data Stack Analytics for FulôFiló"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32.0",
    "polars>=0.20.15",
    "duckdb>=0.10.0",
    "plotly>=5.19.0",
    "pandas>=2.2.1",
    "pillow>=10.2.0",
    "numpy>=1.26.4",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.4",
    "openpyxl>=3.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "etl"]

[project.optional-dependencies]
coreml = [
    "coremltools>=7.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
